@@ -35,6 +35,7 @@ Fit: "fit"
   FitType: SPLUSB
   FitRegion: CRSR
 %   FitBlind: TRUE
+  doLHscan: "ttXsec"
 
 % --------------- %
 % ---  LIMIT    --- %
@@ -158,6 +159,7 @@ Systematic: "ttXsec"
   Type: OVERALL
   OverallUp:    0.10
   OverallDown: -0.10
+  IsFreeParameter: TRUE
   Samples: ttbar
 
 % Weight systematics
